--- a/css/timer.css
+++ b/css/timer.css
@@ -12,7 +12,7 @@ font-family: 'Titillium Web', cursive;
   margin-bottom:-30px;
 }
 
-span {
+.xyz {
   display: block;
   font-size: 20px;
   color: white;
