--- a/css/style.css
+++ b/css/style.css
@@ -399,7 +399,7 @@ li {
 }
 .main-banner {
     position: relative;
-    background-image: url('../images/retina/banner/banner-3.JPG');
+    background-image: url('../images/retina/banner/banner-3.jpeg');
     background-size: cover;
     background-position: center;
     width: 100%;
